Fix question mark tooltip overlap issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -192,7 +192,7 @@ html[data-theme="dark"] a[class^='fa-solid fa-circle-question'] {
   text-wrap: nowrap;
   visibility: hidden;
   width: auto;
-  z-index: 1;
+  z-index: 10;
   top: -2px;
   left: 125%;
 }
